Please see NEWS for a summary of changes since the last release suitable
for announcements.

* Tue Aug 28 2012 Thunor <thunorsif@hotmail.com>
- Added support for presentwindow.
- Added examples/miscellaneous/presentwindow.
- Added some code to action_launchwindow() to check that a program isn't
  already being parsed as this process is not reetrant and it caused the
  parser to quit with a nonsensical message; now it warns and continues.
- Updated the wiki and the reference docs.

* Mon Aug 27 2012 Thunor <thunorsif@hotmail.com>
- Updated the terminal widget: its variable now contains its pid.
- Updated examples/terminal/terminal to output the pid with the signals.
- Added support for clear to the terminal widget.
- Updated the terminal widget: argv0 now defaults to /bin/sh so a
  terminal widget could simply be <terminal></terminal>.
- Added examples/miscellaneous/grabfocus.

* Sun Aug 26 2012 Thunor <thunorsif@hotmail.com>
- Updated the terminal widget so that when the user types exit or it is
  killed, the terminal resets and the command is forked again. This will
  happen before the application receives the child-exited signal.

* Sat Aug 25 2012 Thunor <thunorsif@hotmail.com>
- Added support for grabfocus to compatible widgets.
- Added examples/terminal/terminal.
- Updated the wiki and the reference docs.

* Fri Aug 24 2012 Thunor <thunorsif@hotmail.com>
- New widget: <terminal> -- requires libvte but is not mandatory.

* Thu Aug 23 2012 Thunor <thunorsif@hotmail.com>
- Added examples/miscellaneous/conditional_widget_refreshing.
- Modified ST_TAG_ATTR in the lexer to accommodate "0-9".

* Tue Aug 21 2012 Thunor <thunorsif@hotmail.com>
- Added examples/c_embedded/example01 and Makefile by sklimkin.

* Mon Aug 20 2012 Thunor <thunorsif@hotmail.com>
- Added support for button horizontal image with label alignment: by
  default the alignment is centred but it can be optionally uniform.
- Added examples/button/button_image_horizontal_alignment.